<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project basedir="." default="build" name="c4j_web_react">

    <!-- General properties -->
    <property environment="env"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="21"/>
    <property name="source" value="21"/>
    
    <!-- Custom property for Tomcat libraries -->
    <property name="tomcat.lib.dir" value="../../../../tools/apache-tomcat-11.0.7 (Java 21)/lib"/>

    <!-- Classpath declarations -->
    <path id="EAR Libraries.libraryclasspath"/>

    <path id="Web App Libraries.libraryclasspath">
        <fileset dir="WebContent/WEB-INF/lib">
            <include name="**/*.jar"/>
        </fileset>
    </path>

    <path id="Server Runtime [Apache Tomcat v11.0].libraryclasspath">
        <fileset dir="${tomcat.lib.dir}">
            <include name="**/*.jar"/>
        </fileset>
    </path>

    <path id="c4j_web_react.classpath">
        <pathelement location="build/classes"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="Server Runtime [Apache Tomcat v11.0].libraryclasspath"/>
    </path>

    <!-- Initialization target -->
    <target name="init">
        <mkdir dir="build/classes"/>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>

    <!-- Cleaning targets -->
    <target name="clean">
        <delete dir="build/classes"/>
    </target>

    <target depends="clean" name="cleanall"/>

    <!-- Build process -->
    <target depends="build-subprojects,build-project" name="build"/>

    <target name="build-subprojects"/>

    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="c4j_web_react.classpath"/>
            <compilerarg value="-proc:full"/>
        </javac>
    </target>

    <!-- WAR packaging -->
    <target name="war" depends="build">
        <war destfile="target/c4j_web_react.war" webxml="WebContent/WEB-INF/web.xml">
            <fileset dir="WebContent"/>
            <lib dir="WebContent/WEB-INF/lib"/>
            <classes dir="build/classes"/>
        </war>
    </target>

    <!-- Propagation build -->
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>

</project>
